# moclo

./: .gitignore  .travis.yml  README.md  README.rst  setup.cfg
.github/: dependabot.yml
.github/workflows/: before-deploy.py  package.yml  requirements.txt  test.yml
automoclo/: __init__.py  record.py  regex.py
ci/: requirements.txt
ci/travis/: before-deploy.py  before-deploy.sh  decrypt-all.sh  test-docker.sh
docs/: Makefile  make.bat  requirements.txt
docs/source/: about.rst  api.rst  conf.py  definitions.rst  index.rst  install.rst  process.rst
docs/source/_scripts/: registries.py  ytk_parts.py  ytk_registries.py
docs/source/_static/: bootstrap-math.css
docs/source/api/: errors.rst  index.rst  modules.rst  parts.rst  record.rst  registry.rst  vectors.rst
docs/source/changes/: .gitignore  index.rst
docs/source/concepts/: definitions.rst  index.rst
docs/source/examples/: .gitignore  index.rst  ytk-vector.ipynb
docs/source/kits/: ytk.rst
docs/source/theory/: definitions.rst  index.rst  standard.rst  typed.rst
moclo/: CHANGELOG  COPYING  MANIFEST.in  README.md  README.rst  setup.cfg
moclo-cidar/: CHANGELOG  README.md  README.rst  setup.cfg  setup.py
moclo-cidar/moclo/kits/: cidar.py  cidar.version
moclo-cidar/moclo/registry/: __init__.py  cidar.py
moclo-cidar/registry/cidar/: B0015_DE.gb  B0015_DF.gb  B0015_DG.gb  B0015_DH.gb  B0032m_BC.gb  B0033m_BC.gb  B0034m_BC.gb  BCD12_BC.gb  BCD2_BC.gb  BCD8_BC.gb  C0012m_CD.gb  C0040_CD.gb  C0062_CD.gb  C0080_CD.gb  DVA.gb  DVA_AB.gb  DVA_AE.gb  DVA_AF.gb  DVA_AG.gb  DVA_AH.gb  DVA_BC.gb  DVA_CD.gb  DVA_DE.gb  DVA_DF.gb  DVA_DG.gb  DVA_DH.gb  DVA_EB.gb  DVA_EF.gb  DVA_EG.gb  DVA_EH.gb  DVA_FB.gb  DVA_GB.gb  DVK.gb  DVK_AE.gb  DVK_AF.gb  DVK_EF.gb  DVK_FG.gb  DVK_GH.gb  E0030_CD.gb  E0040m_CD.gb  (+63 more)
moclo-ecoflex/: CHANGELOG  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
moclo-ecoflex/moclo/kits/: __init__.py  ecoflex.py
moclo-ecoflex/moclo/registry/: ecoflex.py
moclo-ecoflex/registry/ecoflex/: pBP-BBa_B0012.gb  pBP-BBa_B0015.gb  pBP-BBa_B0034.gb  pBP-HexHis.gb  pBP-His6.gb  pBP-J23100.gb  pBP-J23108.gb  pBP-J23114.gb  pBP-L1U1H08.gb  pBP-L1U1H09.gb  pBP-L2U2H09.gb  pBP-L2U3H03.gb  pBP-L2U5H08.gb  pBP-L2U5H11.gb  pBP-L2U8H11.gb  pBP-L3S1P11.gb  pBP-L3S1P32.gb  pBP-L3S1P51.gb  pBP-L3S2P21.gb  pBP-SJM901.gb  pBP-SJM902.gb  pBP-SJM903.gb  pBP-SJM905.gb  pBP-SJM906.gb  pBP-SJM908.gb  pBP-SJM910.gb  pBP-SJM911.gb  pBP-SJM912.gb  pBP-SJM914.gb  pBP-SJM915.gb  pBP-Strep(II).gb  pBP-T7-RBS-His6.gb  pBP-T7-RBS.gb  pBP-T7.gb  pBP-T7_RBS.gb  pBP-T7_RBS_His6.gb  pBP-TL1.gb  pBP-TL10.gb  pBP-TL11.gb  pBP-TL12.gb  (+37 more)
moclo-gb3/: CHANGELOG  MANIFEST.in  setup.cfg  setup.py
moclo-gb3/moclo/kits/: gb3.py
moclo-ig/: README.md  README.rst  setup.cfg  setup.py
moclo-ig/moclo/kits/: ig.py
moclo-ig/moclo/registry/: ig.py
moclo-moclo/: CHANGELOG  COPYING  README.md  setup.cfg
moclo-plant/: README.md  setup.cfg  setup.py
moclo-ytk/: CHANGELOG  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
moclo-ytk/moclo/kits/: __init__.py  ytk.py
moclo-ytk/moclo/registry/: ptk.inv  ytk.inv  ytk.py
moclo-ytk/registry/ptk/: pPTK001.gb  pPTK002.gb  pPTK003.gb  pPTK004.gb  pPTK005.gb  pPTK006.gb  pPTK007.gb  pPTK008.gb  pPTK009.gb  pPTK010.gb  pPTK011.gb  pPTK012.gb  pPTK013.gb  pPTK014.gb  pPTK015.gb  pPTK016.gb  pPTK017.gb  pPTK018.gb  pPTK019.gb  pPTK020.gb  pPTK021.gb
moclo-ytk/registry/ytk/: pYTK001.gb  pYTK002.gb  pYTK003.gb  pYTK004.gb  pYTK005.gb  pYTK006.gb  pYTK007.gb  pYTK008.gb  pYTK009.gb  pYTK010.gb  pYTK011.gb  pYTK012.gb  pYTK013.gb  pYTK014.gb  pYTK015.gb  pYTK016.gb  pYTK017.gb  pYTK018.gb  pYTK019.gb  pYTK020.gb  pYTK021.gb  pYTK022.gb  pYTK023.gb  pYTK024.gb  pYTK025.gb  pYTK026.gb  pYTK027.gb  pYTK028.gb  pYTK029.gb  pYTK030.gb  pYTK031.gb  pYTK032.gb  pYTK033.gb  pYTK034.gb  pYTK035.gb  pYTK036.gb  pYTK037.gb  pYTK038.gb  pYTK039.gb  pYTK040.gb  (+56 more)
moclo/moclo/: __init__.py  _impl.py  _utils.py  errors.py  record.py  regex.py  utils.py
moclo/moclo/base/: __init__.py  _structured.py  _utils.py  modules.py  parts.py  vectors.py
moclo/moclo/core/: __init__.py  _assembly.py  _structured.py  _utils.py  modules.py  parts.py  vectors.py
moclo/moclo/kits/: __init__.py
moclo/moclo/registry/: _utils.py  base.py  elabftw.py  utils.py
notebook/ytk/: Dockerfile  YTK Protocol.ipynb  lib.py
registries/ytk/: README.rst  pYTK001.gb  pYTK002.gb  pYTK003.gb  pYTK004.gb  pYTK005.gb  pYTK006.gb  pYTK007.gb  pYTK008.gb  pYTK009.gb  pYTK010.gb  pYTK011.gb  pYTK012.gb  pYTK013.gb  pYTK014.gb  pYTK015.gb  pYTK016.gb  pYTK017.gb  pYTK018.gb  pYTK019.gb  pYTK020.gb  pYTK021.gb  pYTK022.gb  pYTK023.gb  pYTK024.gb  pYTK025.gb  pYTK026.gb  pYTK027.gb  pYTK028.gb  pYTK029.gb  pYTK030.gb  pYTK031.gb  pYTK032.gb  pYTK033.gb  pYTK034.gb  pYTK035.gb  pYTK036.gb  pYTK037.gb  pYTK038.gb  pYTK039.gb  (+54 more)
registry/ytk/: pYTK001.gb  pYTK002.gb  pYTK003.gb  pYTK004.gb  pYTK005.gb  pYTK006.gb  pYTK007.gb  pYTK008.gb  pYTK009.gb  pYTK010.gb  pYTK011.gb  pYTK012.gb  pYTK013.gb  pYTK014.gb  pYTK015.gb  pYTK016.gb  pYTK017.gb  pYTK018.gb  pYTK019.gb  pYTK020.gb  pYTK021.gb  pYTK022.gb  pYTK023.gb  pYTK024.gb  pYTK025.gb  pYTK026.gb  pYTK027.gb  pYTK028.gb  pYTK029.gb  pYTK030.gb  pYTK031.gb  pYTK032.gb  pYTK033.gb  pYTK034.gb  pYTK035.gb  pYTK036.gb  pYTK037.gb  pYTK038.gb  pYTK039.gb  pYTK040.gb  (+56 more)
scripts/: cidar_registry.py  ecoflex_registry.py  ig_registry.py  moclo_registry.py  plant_registry.py  ptk_registry.py
scripts/features/: __init__.py  ampr-prom.yml  ampr-term.yml  ampr.yml  cmr-prom.yml  cmr-term.yml  cmr.yml  egfp.yml  gfp.yml  kanr-prom.yml  kanr-term.yml  kanr.yml  luxpl.yml  luxr.yml  mcherry.yml  mrfp.yml  plac.yml  ptet.yml
tests/: __init__.py  _utils.py  requirements.txt  test_assembly.py  test_base.py  test_cidar.py  test_core.py  test_doctest.py  test_ecoflex.py  test_plant.py  test_record.py  test_regex.py  test_registry.py  test_utils.py  test_ytk.py  utils.py
tests/data/: .gitignore  README.rst  cidar.tsv.xz  ecoflex.tsv.xz  ytk-multigene.tsv.xz.enc  ytk.csv.xz  ytk.tsv.xz
(+116 files in other folders)
