[metadata]
name = moclo-ytk
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/moclo.py
description = Modular cloning with the MoClo framework (Yeast ToolKit)
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keywords = bioinformatics, synthetic biology, modular cloning, moclo, yeast
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = moclo.kits
test_suite = tests
setup_requires =
  setuptools
install_requires =
	moclo ~= 0.1.0
	six ~=1.10
tests_require =
	moclo-ytk[test]

[bdist_wheel]
universal = 1

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[options.extras_require]
dev =
	docutils
	Pygments
	codecov
test =
	green
	coverage
	docker

[coverage:report]
show_missing = true
exclude_lines =
	pragma: no cover
	if typing.TYPE_CHECKING:
	@abc.abstractmethod
	@abc.abstractproperty
	raise NotImplementedError
	return NotImplemented

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
ignore = D200, D203, D213, D406, D407   # Google conventions

[mypy]
ignore_missing_imports = true

[mypy-moclo.*]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false
