[metadata]
name = moclo
version = file: moclo/__version__.txt
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/moclo/
description = A Python implementation of the MoClo system logic.
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keywords = bioinformatics, synthetic biology, modular cloning, moclo
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
  Bug Reports = https://github.com/althonos/moclo/issues
  Documentation = https://moclo.readthedocs.io/en/latest/
  Addgene Guide = https://www.addgene.org/cloning/moclo/

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.5.1
packages = find:
test_suite = tests
setup_requires =
  setuptools >=39.2
install_requires =
	biopython ~=1.71
	cached-property ~=1.4
	six ~=1.10
	typing ~=3.6 						; python_version < '3.6'

[bdist_wheel]
universal = 1

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[options.extras_require]
dev =
	docutils
	Pygments
	codecov
test =
	green
	coverage
	docker

[options.package_data]
* = __version__.txt

[coverage:report]
show_missing = true
exclude_lines =
	pragma: no cover
	if typing.TYPE_CHECKING:
	@abc.abstractmethod
	@abc.abstractproperty
	raise NotImplementedError
	return NotImplemented

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
ignore = D200, D203, D213, D406, D407   # Google conventions

[mypy]
ignore_missing_imports = true

[mypy-moclo.*]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false
